[gd_scene load_steps=14 format=3 uid="uid://c64bvuv6igryb"]

[ext_resource type="Script" path="res://scripts/button_bind.gd" id="1_s8ryp"]
[ext_resource type="FontFile" uid="uid://ciijjbxlx6xl7" path="res://resources/fonts/COOPBL.ttf" id="2_mqv6f"]

[sub_resource type="Theme" id="Theme_0ryx2"]
Label/font_sizes/font_size = 100

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_62n8v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bf5ck"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3oyq"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 859
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kngc3"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 859
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqje5"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="Theme" id="Theme_stn64"]
default_font = ExtResource("2_mqv6f")
Button/colors/font_color = Color(0.284398, 0.000272228, 0.877517, 1)
Button/colors/font_focus_color = Color(0.433069, 0.241361, 1, 1)
Button/colors/font_hover_color = Color(0.431373, 0.243137, 1, 1)
Button/colors/font_hover_pressed_color = Color(0.431373, 0.243137, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.431373, 0.243137, 1, 1)
Button/constants/outline_size = 20
Button/font_sizes/font_size = 45
Button/styles/focus = SubResource("StyleBoxEmpty_bf5ck")
Button/styles/hover = SubResource("StyleBoxFlat_p3oyq")
Button/styles/normal = SubResource("StyleBoxFlat_kngc3")
Button/styles/pressed = SubResource("StyleBoxFlat_gqje5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8fnti"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tnk2i"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 859
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="Theme" id="Theme_lqhro"]
default_font = ExtResource("2_mqv6f")
Button/colors/font_color = Color(0.769831, 0.470353, 0, 1)
Button/colors/font_focus_color = Color(0.414142, 0.243807, 9.62615e-08, 1)
Button/colors/font_hover_color = Color(0.415686, 0.243137, 0, 1)
Button/colors/font_hover_pressed_color = Color(0.415686, 0.243137, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.415686, 0.243137, 0, 1)
Button/constants/outline_size = 20
Button/font_sizes/font_size = 45
Button/styles/focus = SubResource("StyleBoxEmpty_bf5ck")
Button/styles/hover = SubResource("StyleBoxFlat_tnk2i")
Button/styles/normal = SubResource("StyleBoxFlat_kngc3")
Button/styles/pressed = SubResource("StyleBoxFlat_gqje5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6is6g"]

[node name="Button_bind" type="Control" groups=["bind", "saveinputsettings"]]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
script = ExtResource("1_s8ryp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 978.0
offset_bottom = 49.0

[node name="Label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = SubResource("Theme_0ryx2")
theme_override_colors/font_color = Color(0, 0.828189, 0.271528, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 35
text = "Aktion"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25
theme_override_styles/separator = SubResource("StyleBoxEmpty_62n8v")

[node name="pc" type="Button" parent="HBoxContainer" groups=["input_pc"]]
physics_interpolation_mode = 0
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme = SubResource("Theme_stn64")
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 35
toggle_mode = true
text = "pc-key"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 35
theme_override_styles/separator = SubResource("StyleBoxEmpty_8fnti")

[node name="con" type="Button" parent="HBoxContainer" groups=["input_con"]]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme = SubResource("Theme_lqhro")
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 35
toggle_mode = true
text = "controler-key"

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
theme_override_styles/separator = SubResource("StyleBoxEmpty_6is6g")

[node name="Android" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.615686, 0.894118, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 35
text = "key"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="HBoxContainer/pc" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/pc" to="." method="_on_pc_focus_exited"]
[connection signal="mouse_entered" from="HBoxContainer/pc" to="." method="_on_mouse_entered"]
[connection signal="toggled" from="HBoxContainer/pc" to="." method="_on_pc_toggled"]
[connection signal="focus_entered" from="HBoxContainer/con" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/con" to="." method="_on_con_focus_exited"]
[connection signal="mouse_entered" from="HBoxContainer/con" to="." method="_on_mouse_entered"]
[connection signal="toggled" from="HBoxContainer/con" to="." method="_on_con_toggled"]
